<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/location_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/app_setup_title_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/application_setup"
        android:textSize="@dimen/title_text_size" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/postcode_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/enter_postcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_setup_title_location" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/postcode_given"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:hint="@string/current_postcode"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_setup_title_location" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/maximum_distance_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/hint_enter_the_maximum_distance_in_miles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postcode_input_text" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/maximum_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:hint="@string/hint_enter_the_maximum_distance_in_miles"
        android:inputType="number|numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postcode_input_text" />


    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/use_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_location_if_available"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maximum_distance_input" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/show_welsh_services_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:text="@string/prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/finish" />

</android.support.constraint.ConstraintLayout>