<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/list_view"
        android:title="@string/list_view">

    </item>
    <item
        android:id="@+id/map_view"
        android:title="@string/map_view">

    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/settings">
    </item>

</menu>
